<resources>
    <string name="app_name">Simple Cash Register</string>
    <string name="ksh_0">KSH 0.00</string>

    <!--    Keyboard-->
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">DEL</string>
    <string name="btn_add">ADD</string>
    <string name="ksh">KSH</string>
    <string name="no_record">No Record!</string>

</resources>